# RGU

./: CMakeLists.txt  README.md  brain0.tsv  brain1.tsv  licenses.txt  matches  replay.txt
include/: 2n_elimination_bracket.hpp  Game.hpp  Player.hpp  SDL_functions.hpp  optimize.hpp  playMatch.hpp
src/: 2n_elimination_bracket.cpp  CMakeLists.txt  Game.cpp  Player.cpp  SDL_functions.cpp  example_noisy_optimization.cpp  main.cpp  main_train.cpp  main_train_generational.cpp  optimize.cpp  optimize_EXTRA_THREADED.cpp  optimize_OLD_THREADED.cpp  playMatch.cpp  plot_landscape.cpp
